--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="stylesheet" type="text/css" href="cssstyle/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,10 +26,10 @@
 .jumbotron {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 
 }
 img {
@@ -45,31 +45,32 @@ img {
 
   <div class="navbar">
     <div class="topnav-right">
-      <a href="#home">ГЛАВНАЯ</a>
-      <a href="#news">О НАС</a>
-    </div>
-    
-    <a href="#">СОГЛАШЕНИЕ</a>
-    <a href="#">РОЗЫГРЫШИ</a>
-    <a href="#">СКИДКИ</a>
+      <a href="homepage/home.html">ГЛАВНАЯ</a>
+      
     <div class="dropdown">
       <button class="dropbtn">МАГАЗИН
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="shop/packs.html"><img src="pictures/pack/pack4.png" width="20" height="20" >Паки</a>
+        <a href="shop/packs.html">Паки</a>
         <a href="shop/vbucs.html">Вбаксы</a>
         <a href="shop/vbucksgift.html">Вбаксы-подарком</a>
         <a href="shop/crew.html">Подписка</a>
         <a href="shop/codefort.html">Коды</a>
       </div>
     </div>
+    <a href="homepage/about us.html">О НАС</a>
+    <a href="homepage/agreement.html">СОГЛАШЕНИЕ</a>
+    <a href="homepage/giveaways.html">РОЗЫГРЫШИ</a>
+    <a href="homepage/sale.html">СКИДКИ</a>
+    <a href="homepage/contact us.html">ПОДЗЕРЖКАВ</a>
+    </div>
   </div>
 
     <div class="container">
         <div class="jumbotron" style="margin-top: 80px;">
-            <h1>Welcome to our Vdench1k Shop!</h1>
-            <p>We have the best virtual iteams for game for you. No need to hunt around, we have all in one place.</p>
+          <h1>Fishshop-Рибкашоп</h1>
+          <p>Добро пожаловать!</p>
         </div>
     </div>
     <div class="footer">
